yamls/prodv2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prodapiv2
  namespace: myistio
spec:
  selector:
    matchLabels:
      app: prod
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: prod
        version: v2
    spec:
      nodeName: node02
      containers:
        - name: prodv2
          image: registry.cn-hangzhou.aliyuncs.com/boyfoo/prod:2.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
