yamls/prodv1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prodapiv1
  namespace: myistio
spec:
  selector:
    matchLabels:
      app: prod
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: prod
        version: v1
    spec:
      nodeName: node02
      containers:
        - name: prodv1
          image: registry.cn-hangzhou.aliyuncs.com/boyfoo/prod:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: prodsvc
  namespace: myistio
  labels:
    app: prod
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector: # 选择得时候没有加version
    app: prod
