yamls/reviewv1.yaml
# reviewapi
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviewapi
  namespace: myistio
spec:
  selector:
    matchLabels:
      app: review
  replicas: 1
  template:
    metadata:
      labels:
        app: review
    spec:
      nodeName: node02
      containers:
        - name: review
          image: registry.cn-hangzhou.aliyuncs.com/boyfoo/review:1.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: reviewsvc
  namespace: myistio
  labels:
    app: review
spec:
  type: ClusterIP  # 节点形式
  ports:
    - port: 80
      targetPort: 8081
  #      nodePort: 30033
  selector:
    app: review
