yamls/kiali.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kiali-gateway
  namespace: myistio
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - kiali.jtthink.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kialiinfo
  namespace: myistio
spec:
  hosts:
    - kiali.jtthink.com
  gateways:
    - kiali-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
