yamls/prod-rule-hash.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: prod-rule-hash
  namespace: myistio
spec:
  host: prodsvc # 与prod-gateway-vs内的route.destination.host 一致才能对应上
  trafficPolicy:
    loadBalancer:
      consistentHash: # httpCookie(基于cookie) useSourceIp(基于ip) minimumRingSize(环形hash)
        httpHeaderName: myname  #基于head头
  subsets:
    - name: prod-rule-hash-sub # 名称 对应下方VirtualService中使用的
      labels:
        app: prod #选择pod的标签

---
# 定义虚拟服务
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prodinfohash
  namespace: myistio
spec:
  hosts:
    - prod.jtthink.com
  gateways:
    - prod-gateway
  http:
    - match:
        - uri:
            prefix: "/hash"
      rewrite:
        uri: "/pords"
      route:
        - destination:
            subset: prod-rule-hash-sub # 定义目的路由子集合
            host: prodsvc #服务名称
            port:
              number: 80
