yamls/prod-rule-round.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: prod-rule-round
  namespace: myistio
spec:
  host: prodsvc
  trafficPolicy:
    loadBalancer:
      simple: RANDOM # 轮序ROUND_ROBIN（默认） LEAST_CONN(最少连接) RANDOM(随机)

  # 当设置了上面的内容后，注释了下面的所有代码，包括下面的VirtualService内容，请求到/p/*的都会变成对应的loadBalancer方式 跟下面subsets是否设置的无关
  # 上面的代码设置后请求 /p/12 或 /simple 都是随机
  # subsets理解为在上面设置已经在代理中后多准备了多个附加条件，只有destination.subset指定了这个附加条件才生效，不指定这个条件不会生效
  subsets:
    - name: prod-rule-round-sub # 名称 对应下方VirtualService中使用的
      labels:
        app: prod #选择pod的标签

---
# 定义虚拟服务
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prodinforound
  namespace: myistio
spec:
  hosts:
    - prod.jtthink.com
  gateways:
    - prod-gateway
  http:
    - match:
        - uri:
            prefix: "/simple"
      rewrite:
        uri: "/prods"
      route:
        - destination:
            subset: prod-rule-round-sub # 定义目的路由子集合
            host: prodsvc #服务名称
            port:
              number: 80
