yamls/prod-vs-err-code.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prodvserrcode
  namespace: myistio
spec:
  hosts:
    - prod.jtthink.com
  gateways:
    - prod-gateway
  http:
    - match:
        - uri:
            prefix: "/errcode"
      rewrite:
        uri: "/prods"
      fault:
        abort:
          httpStatus: 500
          percentage:
            value: 100 #百分百
      route:
        - destination:
            host: prodsvc #服务名称
            port:
              number: 80
