yamls/prod-vs-err-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prodvserr
  namespace: myistio
spec:
  hosts:
    - prod.jtthink.com
  gateways:
    - prod-gateway
  http:
    - match:
        - uri:
            prefix: "/delay"
      rewrite:
        uri: "/prods"
      fault:
        delay:
          fixedDelay: 3s
          percentage:
            value: 100 #百分百
      route:
        - destination:
            host: prodsvc #服务名称
            port:
              number: 80
