yamls/prod-vs-https.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prod-gateway-https
  namespace: myistio
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
        privateKey: /etc/istio/ingressgateway-certs/tls.key
      hosts:
        - istio.k3s.wiki
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prodinfo-https
  namespace: myistio
spec:
  hosts:
    - istio.k3s.wiki
  gateways:
    - prod-gateway-https
  http:
    - match:
        - uri:
            prefix: "/p"
      rewrite:
        uri: "/prods"
      route:
        - destination:
            host: prodsvc
            port:
              number: 80
