yamls/prodv2-rule.yaml
# 创建一个路由规则
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: prodv2-rule
  namespace: myistio
spec:
  host: prodsvc # 与prod-gateway-vs内的route.destination.host 一致才能对应上
  subsets:
    - name: prodv2-rule-svc # 名称 对应下方VirtualService中使用的
      labels:
        version: v2 # 只选中version=v2的pod

---
# 定义虚拟服务
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prodv2info
  namespace: myistio
spec:
  hosts:
    - prod.jtthink.com
  gateways:
    - prod-gateway
  http:
    - match:
        - uri:
            prefix: "/v2/p"
      rewrite:
        uri: "/prods"
      route:
        - destination:
            subset: prodv2-rule-svc # 定义目的路由子集合
            host: prodsvc #服务名称
            port:
              number: 80
