yamls/jwt-test.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-test
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
    - issuer: "user@jtthink.com"#jwt内payload的iss字段对应的值
      jwks: |
        {
            "keys": [
              {
                "e":"AQAB",
                "kty":"RSA",
                "n":"uboAte4RXMcRjQX39mDLlK6HyfAOLiA_MfD-zpUlAlE4H83VA8k4DWOwajAU6gKoyxxINfLBsmKxJZv7IGQrWLluslrrFMUBS5wHFobps4Xvg0F_nPyWWGC7pdh31I7qPxzdU8jr-N-nEBfGRI1aV3hRf4_rReo6Gt0dHFsqwtR6J7uIPferFUJE3cXM0Xj6Yurnulgd4EKOb-mw4QKaJp2E_Ua7lEL3Vyud6XbHAONYoq53J0PGtlv41VASsB9c8qWeJKPuwO9dxRRbrwDiWKLXcLN83gNUCLYSlMkZiwlmsEpefvJnar_hEuBlu1EkXLUmT-0LbnhUnHdn0r9vEw"
              }
            ]
        }
      forwardOriginalToken: true #token继续传到下游的header请求中
      outputPayloadToHeader: "Userinfo" #认证解析后的内容base64编码后放入改header字段内
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: prod-authpolicy
  namespace: istio-system #因为下面matchLabels针对的是ingressgateway 所以要用在ingressgateway的命名空间内
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  rules:
    - from:
        - source:
            requestPrincipals: [ "*" ]
