yamls/prod-vs-celue.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prod-gateway
  namespace: myistio
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - prod.jtthink.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prod-vs-celue
  namespace: myistio
spec:
  hosts:
    - prod.jtthink.com
  gateways:
    - prod-gateway
    - mesh # 内部访问也走路由网关
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: prodsvc #服务名称
            port:
              number: 80
      # 跨域
      corsPolicy:
        allowOrigins:
          - exact: "*"
        allowMethods:
          - GET
          - POST
          - PATCH
          - PUT
          - DELETE
          - OPTIONS
        allowCredentials: true
        allowHeaders:
          - authorization # 允许携带的头
        maxAge: "24h"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: prod-authpolicy-celue
  namespace: istio-system
spec:
  action: ALLOW
  selector:
    matchLabels:
      istio: ingressgateway
  rules:
    - from:
        - source:
            requestPrincipals: [ "*" ]
      to:
        - operation:
            methods: [ "GET" ]
            paths: [ "/prods/*" ] #允许访问的
    - from:
        - source:
            requestPrincipals: [ "*" ]
      to:
        - operation:
            methods: [ "GET" ]
            paths: [ "/admin" ]
      when: #必须满足的条件
        - key: request.auth.claims[role]  # jwt生成时payload内的role字段的值
          values: [ "admin" ]
